<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_scale"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btn_networking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_retrofit" />

    <Button
        android:id="@+id/btn_architecture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_architecture" />

    <Button
        android:id="@+id/btn_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_preference" />

    <Button
        android:id="@+id/btn_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_title_database" />

</LinearLayout>