<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".retrofit.presentation.list.UserListActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_scale"
        android:hint="@string/database_hint_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_scale"
        android:hint="@string/database_hint_description"
        app:layout_constraintEnd_toEndOf="@id/et_title"
        app:layout_constraintStart_toStartOf="@id/et_title"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <Button
        android:id="@+id/btn_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_scale"
        android:text="@string/database_btn_title_save"
        app:layout_constraintEnd_toEndOf="@id/et_description"
        app:layout_constraintStart_toStartOf="@id/et_description"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <Button
        android:id="@+id/btn_delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_scale"
        android:text="@string/database_btn_title_delete"
        app:layout_constraintEnd_toEndOf="@id/btn_add_note"
        app:layout_constraintStart_toStartOf="@id/btn_add_note"
        app:layout_constraintTop_toBottomOf="@id/btn_add_note" />

</androidx.constraintlayout.widget.ConstraintLayout>